Added README.md, extracted strings, AsyncTask bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <!--MovieListActivity-->
     <string name="no_movies_text">Unable to retrieve any movie</string>
+    <string name="retrieve_data_error">Unable to retrieve movie data</string>
 
     <!--MovieDetailsActivity-->
     <string name="rating_label">Rating:</string>
