--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!--MovieListActivity-->
     <string name="no_movies_text">Unable to retrieve any movie</string>
     <string name="retrieve_data_error">Unable to retrieve movie data</string>
+    <string name="no_connection">Device is not connected</string>
 
     <!--MovieDetailsActivity-->
     <string name="rating_label">Rating:</string>
