Added review to movie details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,10 @@
     <string name="rating_label">Rating:</string>
     <string name="release_date_label">Release Date:</string>
     <string name="trailers_label">Trailers:</string>
+    <string name="reviews_label">Reviews:</string>
+
+    <!--ReviewItem-->
+    <string name="author_lable">Author:</string>
 
     <!--Menu-->
     <string name="most_popular">Most Popular</string>
